--- a/styles.css
+++ b/styles.css
@@ -46,13 +46,14 @@ h1 {
     transition: 2s;
     box-shadow: 2px 2px 1px #9f729f;
 }
-.botao:hover {
+/* .botao:hover {
     transform: rotateY(180deg);
-}
+} */
 .imagem {
     width: 60px;
     padding: 20px;
-
+    opacity: 1;
+    transition-delay: 0.6s;
 }
 .players {
     align-self: center;
@@ -68,6 +69,18 @@ h1 {
     font-family: 'Fredoka One', cursive;
     color: #424242;
 }
-.player:hover {
+.oculto {
+    opacity: 0;
+}
+.vira {
+    transform: rotateY(180deg);
+}
+.player-ativo {
     background-color: #ffde55;
+}
+.imagem-ativa {
+    opacity: 1;
+}
+.botao-ativo {
+    background-color: #9f729f;
 }
