--- a/styles.css
+++ b/styles.css
@@ -90,6 +90,21 @@ h1 {
     opacity: 1;
     transition-delay: 0.6s;
 }
+.um-player {
+    padding: 5px;
+    align-self: center;
+}
+.tentativas, .tempo {
+    background-color: #ffeb99;
+    border: none;
+    border-radius: 15px;
+    font-size: 1.5rem;
+    padding: 20px;
+    margin: 0px 10px;
+    box-shadow: 2px 2px 2px #ffde55;
+    font-family: 'Fredoka One', cursive;
+    color: #424242;
+}
 .players {
     align-self: center;
 }
