--- a/styles.css
+++ b/styles.css
@@ -119,6 +119,25 @@ h1 {
     font-family: 'Fredoka One', cursive;
     color: #424242;
 }
+.vitoria, .empate {
+    padding: 10px;
+    background: #f3b0c3;
+    font-size: 1.5rem;
+    margin: 0px 5px;
+    font-family: 'Fredoka One', cursive;
+    color: #424242;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    width: 250px;
+    height: 80px;
+    position: absolute;
+    left: calc((100vw - 250px) / 2);
+    top: 350px;
+    box-shadow: 3px 3px 2px #424242;
+    border-radius: 15px;
+}
 .oculto {
     opacity: 0;
 }
@@ -137,3 +156,4 @@ h1 {
 .inativo {
     display: none;
 }
+
